# stock-translation

./: .gitignore  CHART_FEATURE_BLUEPRINT.md  CHART_VISUAL_PRINCIPLES.md  CODEX_HANDOFF.md  CODEX_HANDOFF_2.md  CODEX_HANDOFF_4.md  CODEX_HANDOFF_8.md  CODEX_HANDOFF_9.md  MARKET_AS_MIND_SPEC.md  README.md  README_給測試者.txt  RISK_REVIEW_2026-06-23.md  UX_DESIGN_翻譯機.md  build_release.bat  deepseek.md  grok.md  pyproject.toml  run_app.bat  stock_translator.spec
app/: __init__.py  cli.py  models.py  runtime_paths.py  version.py
data/: .gitignore  stock_catalog.json
docs/: 01-使用者與痛點.md  02-功能優先級.md  03-產品架構.md  04-技術架構.md  05-MVP與Roadmap.md  06-風險與過度設計.md  07-雙模式產品藍圖與老手資訊量.md  08-Codex施工Phase拆分.md  09-旗艦前導書.md  10-小白產品主與專家驗收施工規格.md  11-持倉MVP專家驗收包.md  12-估價適用性與個股頁重整規格.md  13-Opus驗收提示.md  14-Opus驗收回覆.md  15-旗艦下一步施工指導書.md  16-PE-PB河流圖與ETF規格.md  17-法人賣壓設計.md  CODEX_HANDOFF_10.md  CODEX_HANDOFF_11.md  CODEX_HANDOFF_12.md  CODEX_HANDOFF_3.md  CODEX_HANDOFF_5.md  CODEX_HANDOFF_6.md  CODEX_HANDOFF_7.md  CODEX_HANDOFF_9.md  RELEASE_PROCESS.md  android-評估.md  etf-評估.md  structure-fingerprint.md  tpex-評估.md  ui-assets-needed.md  web-deploy-評估.md  名詞解釋.md  第一次開啟_給小白.md
tests/: __init__.py  chart_tour_layout_test.js  test_analyze_summary.py  test_assessment.py  test_assistant_deidentify.py  test_assistant_guardrail.py  test_bulk.py  test_bulk_runner.py  test_chart_tour.py  test_chart_tour_layout.py  test_chips_institutional.py  test_cross_section.py  test_data_gap.py  test_dividends.py  test_excel_export.py  test_excel_screener_export.py  test_forecast_lab.py  test_glossary.py  (+47 more)
(+95 files in other folders)
